# noccstacks

./: README.md  pyproject.toml
src/noccstacks/: crew.py  main.py
src/noccstacks/config/: agents.yaml  tasks.yaml
src/noccstacks/tools/: custom_tool.py
tests/: test_main.py
