[tool.poetry]
name = "noccstacks"
version = "0.1.0"
description = "noccStacks using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }


[tool.poetry.scripts]
noccstacks = "noccstacks.main:run"
run_crew = "noccstacks.main:run"
train = "noccstacks.main:train"
replay = "noccstacks.main:replay"
test = "noccstacks.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
