[project]
name = "noccstacks"
version = "0.1.0"
description = "noccStacks using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.63.6,<1.0.0",
]

[project.scripts]
noccstacks = "noccstacks.main:run"
run_crew = "noccstacks.main:run"
train = "noccstacks.main:train"
replay = "noccstacks.main:replay"
test = "noccstacks.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
